Change class selector name

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,5 +1,5 @@
-p{
-    background-color: #ffcccb;
+.odd{
+    background-color: #ea6868;
     font-family: "DejaVu Sans", Verdana, "Geneva", Tahoma, sans-serif;
-    
+
 }
