Add style to class dos

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,5 +1,9 @@
 .odd{
     background-color: #ea6868;
     font-family: "DejaVu Sans", Verdana, "Geneva", Tahoma, sans-serif;
+}
 
+#dos{
+    color: #2a1ddc;
+    font-size: 36px;
 }
