--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -2,3 +2,11 @@
     background-color: black;
     color: white;
 }
+
+.button-two{
+    background-color: yellow;
+}
+
+.button-one.button-two{
+    
+}
