--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -8,5 +8,6 @@
 }
 
 .button-one.button-two{
-    
+    font-size: 28px;
+    font-family: Arial, Helvetica, 'Times New Roman', Times, sans-serif;
 }
