--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -7,7 +7,7 @@
     background-color: yellow;
 }
 
-.button-one.button-two{
+.button-one,.button-two{
     font-size: 28px;
     font-family: Arial, Helvetica, 'Times New Roman', Times, sans-serif;
 }
