--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -15,6 +15,8 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  gap: 8px;
+  padding: 8px;
 }
 
 .profile-image {
