--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -12,11 +12,13 @@ img {
   font-weight: 900;
   display: flex;
   justify-content: center;
+  margin-bottom: 32px;
 }
 
 .plants {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
+  gap: 52px;
 }
 
 /* do not edit this footer */
