--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -64,3 +64,8 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.top-part {
+  display: flex;
+  justify-content: space-around;
+}
