--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,7 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 3%;
 }
 
 .icon {
@@ -67,5 +68,5 @@ button.cancel {
 
 .top-part {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
