--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -75,3 +75,12 @@ button.cancel {
   font-weight: bold;
   font-size: large;
 }
+
+/* .text {
+  margin-left: 40px;
+} */
+
+.buttons {
+  display: flex;
+  gap: 5px;
+}
