--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -66,21 +66,21 @@ button.cancel {
   color: royalblue;
 }
 
-/* .top-part {
-  display: flex;
-  justify-content: space-between;
-} */
-
 .header {
   font-weight: bold;
   font-size: large;
+  margin-bottom: 10px;
 }
 
-/* .text {
+.text, .header, .buttons {
   margin-left: 40px;
-} */
+}
 
 .buttons {
   display: flex;
   gap: 5px;
+}
+
+.close-button {
+  margin-left: auto;
 }
