--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -21,6 +21,9 @@ body {
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
   padding: 3%;
+  display: flex;
+  gap: 16px;
+  padding: 16px;
 }
 
 .icon {
@@ -34,6 +37,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -70,17 +74,11 @@ button.cancel {
   font-weight: bold;
   font-size: large;
   margin-bottom: 10px;
-}
-
-.text, .header, .buttons {
-  margin-left: 40px;
-}
-
-.buttons {
   display: flex;
-  gap: 5px;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.close-button {
-  margin-left: auto;
+.text {
+  margin-bottom: 16px;
 }
