--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -37,3 +37,9 @@ input {
   justify-content: space-between;
   align-items: center;
 }
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
