Make link groups into a row

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -38,6 +38,16 @@ input {
   align-items: center;
 }
 
+.left-links {
+  display: flex;
+  gap: 20px;
+}
+
+.right-links {
+  display: flex;
+  gap: 20px;
+}
+
 .content {
   display: flex;
   flex-direction: column;
