Space links from the edge of the page

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -45,11 +45,13 @@ input {
 .left-links {
   display: flex;
   gap: 20px;
+  padding-left: 10px;
 }
 
 .right-links {
   display: flex;
   gap: 20px;
+  padding-right: 10px;
 }
 
 .content {
@@ -58,4 +60,9 @@ input {
   align-items: center;
   padding-bottom: 3rem;
   margin-top: 6rem;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
 }
