--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -10,6 +10,9 @@ body {
   color: white;
   font-weight: 900;
   font-size: 32px;
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
 }
 
 .footer {
