--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -37,6 +37,7 @@ body {
   display: flex;
   flex-shrink: 0;
   font-size: 24px;
+  padding: 16px;
 }
 
 .card {
@@ -52,4 +53,6 @@ a {
 
 ul {
   list-style-type: none;
+  margin: 0px;
+  padding: 0px;
 }
