--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,8 +2,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
 }
 
 .header {
@@ -55,4 +53,13 @@ ul {
   list-style-type: none;
   margin: 0px;
   padding: 0px;
+}
+
+.content {
+  display: flex;
+}
+
+.all-cards {
+  display: flex;
+  padding: 32px;;
 }
