--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,6 +2,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
@@ -42,6 +44,7 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 16px;
 }
 
 a {
@@ -55,11 +58,12 @@ ul {
   padding: 0px;
 }
 
-.content {
+/* .content {
   display: flex;
-}
+} */
 
 .all-cards {
   display: flex;
-  padding: 32px;;
+  padding: 32px;
+  gap: 32px;
 }
