--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -23,9 +23,6 @@ body {
   color: darkmagenta;
   display: flex;
   flex-direction: column;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
   justify-content: center;
   align-items: center;
 }
@@ -45,6 +42,8 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
   padding: 16px;
+  display: flex;
+  width: 300px;
 }
 
 a {
@@ -58,12 +57,14 @@ ul {
   padding: 0px;
 }
 
-/* .content {
+.content {
   display: flex;
-} */
+  flex: 1;
+}
 
 .all-cards {
   display: flex;
   padding: 32px;
   gap: 32px;
+  flex-wrap: wrap;
 }
